/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-08-06 01:03 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/hbsockhb.c
    ! minor tweak to kill BCC warning

2012-08-06 00:57 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * winmake/makefile.bc
    + link ws2_32.lib when creating harbour.dll

2012-08-06 00:17 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/inet.c
    ! removed: hbvmopt.h

  * source/rtl/hbsocket.c
    ! memcpy -> HB_MEMCPY

2012-08-05 22:47 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/hbsockhb.c
    ! typo

2012-08-05 22:08 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  + include/hbsocket.ch
  + include/hbsocket.h
  + source/rtl/hbsocket.c
  + source/rtl/hbsockhb.c
    ! socket routines borrowed from Harbour

  * source/rtl/hbip.c
    ! rename hb_socketConnect -> hb_socketConnect_

  + tests/ipsvr.prg
    ! test program for Harbour socket borrowed from Harbour

  * include/thread.h
  * source/vm/thread.c
    + supporting functions for Harbour socket

  * winmake/common.mak
  * winmake/compile.mak
    + Harbour socket dependencies

2012-08-03 07:27 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/dlmalloc.c
    ! remove castings for non-DMC compilers

2012-08-03 07:20 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/fm.c
  * source/vm/dlmalloc.c
    ! fixed to compile under Digital Mars and Open Watcom (MT using dlmalloc)

2012-08-03 02:53 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * include/hbstack.h
    ! reverted previous changes, it did not work.

2012-08-02 21:50 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * include/hbstack.h
    ! missing from commit

2012-08-02 21:49 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * include/hbstack.h
    ! use fake typedef for HB_CRITICAL_T in ST compilation
