@@ -8,6 +8,13 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2012-08-05 19:10 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
+  * include/thread.h
+    ! when in non-mt mode compile, define  HB_CRITICAL_T  as              ULONG
+  * source/rtl/Makefile
+    source/include/Makefile
+    ! added new depenciencies
+    
 2012-08-06 01:03 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * source/rtl/hbsockhb.c
     ! minor tweak to kill BCC warning
